--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,17 +1,19 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Build Linux x64
+run-name: Building SiYuan note for my Linux x64 server
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  build-kernel:
     runs-on: ubuntu-latest
+    container:
+      image: debian:bookworm-slim
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - run: echo "Debian version:"
+      - run: cat /etc/debian_version
       - name: Check out repository code
         uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
