--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -13,6 +13,21 @@ jobs:
       - name: "Check Debian version:"
         run: cat /etc/debian_version
       - uses: actions/checkout@v4
+      - name: check PWD
+        run: echo $PWD && export WORKDIR=$PWD
       - name: List files in the repository
         run: ls 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 21
+      - name: build app
+        run: cd $WORKDIR/app && npm install -g pnpm && pnpm install && pnpm run build
+      - run: ls -R
+      - uses: actions/setup-go@v5
+      - run: go version
+      - name: setup go env
+        run: export GO111MODULE=on && CGO_ENABLED=1
+      - name: build kernel
+        run: cd $WORKDIR/kernel && go build --tags fts5 -v -ldflags "-s -w -X github.com/siyuan-note/siyuan/kernel/util.Mode=prod"
+      - run: ls -R
       - run: echo "🍏 This job's status is ${{ job.status }}."
