--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -24,9 +24,10 @@ jobs:
         run: cd app && npm install -g pnpm@8.14.1 && pnpm install && pnpm run build
       - run: ls -R
       - uses: actions/setup-go@v5
-      - run: go version
+        with:
+          go-version: '1.21.3'
       - name: setup go env
-        run: export GO111MODULE=on && CGO_ENABLED=1
+        run: export GO111MODULE=on && export CGO_ENABLED=1
       - name: build kernel
         run: cd ../kernel && go build --tags fts5 -v -ldflags "-s -w -X github.com/siyuan-note/siyuan/kernel/util.Mode=prod"
       - run: ls -R
