--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -7,8 +7,9 @@ jobs:
     container:
       image: debian:bookworm-slim
       env:
-        - GO111MODULE: on
-        - CGO_ENABLED: 1
+        GO111MODULE: on
+      env:
+        CGO_ENABLED: 1
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
